--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Welcome to GitDemo</h1>
     <p>This is a sample HTML file.</p>
+    <div> 
+        <button>SignIn</button>
+    </div>
 </body>
 </html>
