--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <p>This is a sample HTML file.</p>
     <div> 
         <button>SignIn</button>
+        <button>SignUp</button>
+        <p>This is is a demo og Git.</p>
     </div>
 </body>
 </html>
